- Fixed footer display error on mobile

--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -218,7 +218,7 @@ footer {
     margin-top: 50px;
 
     width: 100vw;
-    height: 80px;
+    min-height: 80px;
 
     clear: both;
 
@@ -232,8 +232,6 @@ footer {
 #footer-content {
     margin: 0 auto;
     padding: 10px;
-
-    height: 4em;
 
     position: relative;
 
